--- a/src/styles/AuthForm.module.css
+++ b/src/styles/AuthForm.module.css
@@ -35,6 +35,7 @@
   max-width: 480px;
   z-index: 101;
   overflow: hidden;
+  margin: 0 auto;
 }
 
 /* Кнопка закрытия формы */
@@ -193,5 +194,12 @@
   .formTitle {
     font-size: 20px;
     margin-bottom: 20px;
+  }
+}
+
+/* Для стандартных десктопных экранов */
+@media (min-width: 1600px) and (max-width: 2000px) {
+  .formContainer {
+    transform: translate(calc(-50% - 60px), -50%);
   }
 } 
