--- a/src/styles/protekproject.webflow.css
+++ b/src/styles/protekproject.webflow.css
@@ -2461,7 +2461,7 @@ body {
 
 .delivery-time-search {
   font-size: var(--_fonts---font-size--core);
-  width: 120px;
+  width: 160px;
   max-height: 40px;
   overflow: hidden;
 }
@@ -2474,7 +2474,7 @@ body {
 }
 
 .price.opencard {
-  width: 70px;
+  width: 33%;
 }
 
 .add-to-cart-block {
@@ -2615,7 +2615,7 @@ body {
   color: var(--_fonts---color--black);
   font-size: var(--_fonts---font-size--core);
   text-align: left;
-  width: 60px;
+  width: 33vw;
   max-height: 40px;
   overflow: hidden;
 }
