--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -64,3 +64,11 @@
   margin-left: 8px;
   margin-right: 8px;
 }
+
+[data-hide-scrollbar]::-webkit-scrollbar {
+  display: none;
+}
+[data-hide-scrollbar] {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none;    /* Firefox */
+}
